Rename the package to hypothetic.unity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "art.hypothetic.hydrogen",
+    "name": "art.hypothetic.unity",
     "displayName": "Hydrogen",
     "version": "0.1.0-rc",
     "unity": "2020.3",
